--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.cmg.jresp.core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.cmg.jresp.simulation"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/junit"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
